# rustilities

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/actions/init/: action.yml
.github/workflows/: ci.yml  release.yml
src/: error.rs  fmt.rs  lib.rs  manifest.rs  parsing.rs  paths.rs
src/fmt/: tests.rs
src/manifest/: tests.rs  types.rs
src/manifest/types/: tests.rs
src/parsing/: attrs.rs  attrs_mut.rs  tests.rs
src/parsing/attrs/: tests.rs
src/parsing/attrs_mut/: tests.rs
src/paths/: tests.rs
